Added more notes to Programming/OOP, fixed placeholder text

--- a/RevisionPages/Development.html
+++ b/RevisionPages/Development.html
@@ -24,15 +24,11 @@
     </div>
 </div>
 </div>
-<section class="color-white " id="about"  >
+<section class="color-white " id="about">
     <div class="container" >
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
                 <h2 style="padding-top:50px;">Stages of Compilation</h2>
-
-                <a href="https://goo.gl/tyJh7I">
-                    <img src="images/Computer_Misuse_Act.gif" alt="CMA">
-                </a>
                 <p>
                 <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
                     The act makes it illegal to carry out any of the following:</h3>
@@ -43,13 +39,13 @@
                     <li>Unauthorised modification of computer material</li>
                     <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
                 </ol>
-                <p class="spacing-small">
+                <p class="paragraph-small">
                     The act works in tiers, so each act has more severe consequences than the last.
-                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
-                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
-                    This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
+                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.
+                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done to punish cyber criminals.
+                    This act helped to fight it by giving the means to prosecute those who comitted such acts.
+                    <p></p> Click the image above to learn more.
                 </p>
-
             </div>
         </div>
     </div>
