--- a/RevisionPages/Processing.html
+++ b/RevisionPages/Processing.html
@@ -64,14 +64,14 @@
                 <p>
                 <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
                 <ul class="row text-left">
-                    <li>Personal data should be obtained and processed fairly amnd lawfully </li>
-                    <li>Personal data can be held only for specified and lawful purposes </li>
-                    <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-                    <li>Personal data should be accurate and kept up-to-date </li>
-                    <li>Personal data should not be kept for longer than is necessary </li>
-                    <li>Data must be processed in accordance with the rights of the data subject </li>
-                    <li>Appropriate security measures must be taken against unauthorised access </li>
-                    <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
+                  <li>Placeholder text</li>
                 </ul>
                 The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
                 This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
