--- a/RevisionPages/Programming.html
+++ b/RevisionPages/Programming.html
@@ -39,12 +39,27 @@
                     <li>The bundling of methods and attributes into objects with access control is called <b>encapsulation</b></li>
                 </ol>
                 <p></p>
-                <p class="spacing-small">
+                <p class="paragraph-small">
                     Object oriented code works on dividing up projects into objects, consisting of attributes and
                     methods. Objects are instances of classes, and can interact with each other through public methods
-                    or attributes. You can encapsulate methods and attributes into objects with access control.
+                    or attributes. Object oriented programming is good for modeling real life situations. The use of classes
+                    and methods allows developers to easily break down problems into much smaller and easier-to-solve chunks.
+                    You can encapsulate methods and attributes into objects with access control. Some of
+                    the basic definitions of OOP terms can be found below.
                 </p>
-
+                <p>
+                <ol class="spacing-small" style="text-align: left">
+                    <li>Classes and Objects - Classes provide a template or blueprint for objects. Objects are an instance of a class.</li>
+                    <li>Attributes - Attributes are properties or characteristics of objects, given in the form of variables</li>
+                    <li>Methods - Methods are actions of objects, given in the form of procedures or subroutines</li>
+                    <li>Constructor - The default method of a class that creates a new instance of an object</li>
+                    <li>Access Modifiers - Determine whether parts of the program can be accessed outside their respective class (Public/Private)</li>
+                    <li>Encapsulation - “Hiding” certain parts of the program from others. This prevents parts of the program outside the class from directly accessing it</li>
+                    <li>Accessor Methods - Methods that pass private attributes of an object outside the class</li>
+                    <li>Static vs Instance - Static methods are not linked to a specific object, but instead belong to the class. Instance methods are linked to an instance of a class (A specific object)</li>
+                    <li>Value vs Reference - Value data types make a copy of the original data and pass that through. This means the original is not affected. By reference data types refer to the memory location of the data, meaning the value changes when updated.</li>
+                    <li>Refactoring - Changing the layout or format of code to make it more efficient or tidier, but not changing the functionality</li>
+                </ol>
             </div>
         </div>
     </div>
@@ -58,14 +73,14 @@
                 <p>
                 <h3>Inheritance allows classes to extend features and properties from others</h3>
                 <ul class="row text-left">
-                    <li>Personal data should be obtained and processed fairly amnd lawfully </li>
-                    <li>Personal data can be held only for specified and lawful purposes </li>
-                    <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-                    <li>Personal data should be accurate and kept up-to-date </li>
-                    <li>Personal data should not be kept for longer than is necessary </li>
-                    <li>Data must be processed in accordance with the rights of the data subject </li>
-                    <li>Appropriate security measures must be taken against unauthorised access </li>
-                    <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
                 </ul>
                 The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
                 This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
@@ -115,14 +130,14 @@
                 <p>
                 <h3>The data protection act was established in 1998. The eight principles are as follows:</h3>
                 <ul class="row text-left">
-                    <li>Personal data should be obtained and processed fairly amnd lawfully </li>
-                    <li>Personal data can be held only for specified and lawful purposes </li>
-                    <li>Personal data should be adequate, relevant and not excessive for the required purpose </li>
-                    <li>Personal data should be accurate and kept up-to-date </li>
-                    <li>Personal data should not be kept for longer than is necessary </li>
-                    <li>Data must be processed in accordance with the rights of the data subject </li>
-                    <li>Appropriate security measures must be taken against unauthorised access </li>
-                    <li>Personal data cannot be transferred to countries outside the E. U. unless the country has similar legislation to the D.P.A. </li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
+                    <li>Placeholder text</li>
                 </ul>
                 The data protection act is designed to do as it states, ensure the safety of personal data. Each principle aims to keep secure data deemed personal.<br>
                 This includes racial or ethnic origin, political opinions and religious beliefs, among the obvious such as name and address. In some cases, collection<br>
