--- a/RevisionPages/Systems.html
+++ b/RevisionPages/Systems.html
@@ -29,19 +29,23 @@
         <div class="row text-center" >
             <div class="col-md-8 col-md-offset-2 ">
                 <h2 style="padding-top:50px;">Database Normalisation</h2>
-                <h3>The computer misuse act came into effect in 1990. It was designed to restrict unauthorised and malicious use of computer systems.
-                    The act makes it illegal to carry out any of the following:</h3>
+                <h3>Databases are a great way of storing and relating relational data. The main language used for databases is SQL</h3>
                 <ol class="row text-left" >
-                    <li>Unauthorised access to computer material</li>
-                    <li>Unauthorised access with intent to commit or facilitate a crime</li>
-                    <li>Unauthorised modification of computer material</li>
-                    <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
+                    <li>SELECT - Allows "selection" of a set of data from a database</li>
+                    <li>UPDATE - Modifies selected data</li>
+                    <li>DELETE - Deletes selected data</li>
+                    <li>INSERT INTO - Insert new data into an existing database</li>
+                    <li>FROM - Chooses the table from which to select data</li>
+                    <li>WHERE - Allows constraints for selection, i.e. WHERE Country="England"</li>
                 </ol>
-                <p class="spacing-small">
-                    The act works in tiers, so each act has more severe consequences than the last.
-                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
-                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
-                    This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
+                <p class="paragraph-small">
+                    While being able to set up a database with the reqired SQL is functional, many programs such as SQLite or Microsoft
+                    Access provide tools to make this easier. However, being able to set up a set of tables isn't what makes a good
+                    database; this is where normalisation comes in. There are three 'forms' to databases, first, second, and third normal form.
+                    Each provides a set of criteria to reduce data inconsistencies and prevent repeated entries.
+                </p>
+                <p class="paragraph-small">
+                    First normal form focuses on...
                 </p>
 
             </div>
