--- a/index.html
+++ b/index.html
@@ -325,7 +325,8 @@ public class Calculator {
 	width: 90%; }
 
 .code:hover {
-	background: #FAFAFA; background-repeat:no-repeat;}
+	background: #FAFAFA; background-repeat:no-repeat;
+}
 						</div>
 					</p>
 				</div>
