Removed clutter, re-arranged slides. (Navbar doesnt't work in chrome)

--- a/index.html
+++ b/index.html
@@ -57,18 +57,10 @@
 					<br/>
 					<a href="RevisionPages/index.html" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-link"></i>&nbsp; Other Site</a>
 					<a href="mailto:james.mcnicholas1@gmail.com?Subject=Business%20enquiry" class="buttoncolor animated fadeInRightBig"><i class="fa fa-envelope-o"></i>&nbsp; Contact</a>
+											<h2><i class="fa fa-arrow-down"></i><h2>
 				</div>
 			</div>
 			<div class="item" id="slide_2">
-				<div class="carousel-content">
-					<div class="animated fadeInDownBig">
-						 <h1>Founder of Riptide, a group of clients, friends and people I can create for</h1>
-					</div>
-					<br/>
-					<a href="#Section-3" class="buttoncolor animated fadeInRightBig"><i class="fa fa-book"></i>&nbsp; Learn More</a>
-				</div>
-			</div>
-			<div class="item" id="slide_3">
 				<div class="carousel-content">
 					<div class="animated fadeInDownBig">
 						 <h1>A novice developer, with a passion to create.</h1>
@@ -76,6 +68,17 @@
 						<br/>
 						<a href="#Section-2" class="buttonyellow animated fadeInLeftBig"><i class="fa fa-download"></i>&nbsp; Read More</a>
 				</div>
+			</div>
+			<div class="item" id="slide_3">
+				<div class="carousel-content">
+					<div class="animated fadeInDownBig">
+						 <h1>Founder of Riptide, a group of clients, friends and people I can create for</h1>
+					</div>
+					<br/>
+					<a href="#Section-3" class="buttoncolor animated fadeInRightBig"><i class="fa fa-book"></i>&nbsp; Learn More</a>
+				</div>
+
+
 			</div>
 		</div>
 	</div>
@@ -474,7 +477,6 @@ public class GuessingNumberGame {
 		<ul class="social-icons">
 			<li><a href="mailto:james.mcnicholas1@gmail.com?Subject=Business%20enquiry"><i class="fa fa-envelope-o"></i></a></li>
 			<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-			<li><a href="http://steamcommunity.com/id/jambosquidge"><i class="fa fa-steam"></i></a></li>
 			<li><a href="https://github.com/jmcnicholas62743"><i class="fa fa-github"></i></a></li>
 			<li><a href="https://stackoverflow.com/users/8327559/james-mcnicholas"><i class="fa fa-stack-overflow"></i></a></li>
 			<li><a href="https://www.codecademy.com/JamesMcnicholas"><i class="fa fa-terminal"></i></a></li>
