--- a/index.html
+++ b/index.html
@@ -57,7 +57,6 @@
 					<br/>
 					<a href="RevisionPages/index.html" class="buttoncolor animated fadeInLeftBig"><i class="fa fa-link"></i>&nbsp; Other Site</a>
 					<a href="mailto:james.mcnicholas1@gmail.com?Subject=Business%20enquiry" class="buttoncolor animated fadeInRightBig"><i class="fa fa-envelope-o"></i>&nbsp; Contact</a>
-											<h2><i class="fa fa-arrow-down"></i><h2>
 				</div>
 			</div>
 			<div class="item" id="slide_2">
@@ -95,8 +94,10 @@
 <div class="section-divider">
 </div>
 <div class="container">
+
 <div class="row">
 	<div class="page-header text-center col-sm-12 col-lg-12 color-white animated fade">
+			<h1><i class="fa fa-arrow-down"></i></h1>
 		<h1>Who am I?</h1>
 		<p class="lead">
 			 What exactly do I do?
