--- a/RevisionPages/Connectivity.html
+++ b/RevisionPages/Connectivity.html
@@ -32,17 +32,32 @@
                 <h3>Lossy vs lossless compression</h3>
                 <ol class="spacing-small" style="text-align: left" >
                     <li>In lossless compression, not every byte of data is stored</li>
-                    <li>Unauthorised access with intent to commit or facilitate a crime</li>
-                    <li>Unauthorised modification of computer material</li>
-                    <li>Making, supplying or obtaining anything which can be used in computer misuse offences</li>
+                    <li>Lossy compression is used when some data can be missing (e.g. in music files)</li>
+                    <li>Lossless compression is used when all data must be preserved (e.g. in a text document)</li>
+                    <li>Examples of lossless compression include run-length encoding and dictionary encoding</li>
                 </ol>
                 <p></p>
-                <p class="spacing-small">
-                    The act works in tiers, so each act has more severe consequences than the last.
-                    For example, <br> unauthorised modification of material has worse consequences than basic unauthorised access to data.<br>
-                    Before 1990, there was no protection against data theft or modification, meaning there was nothing that could be done <br>  to punish cyber criminals.
-                    This act helped to fight it by giving the means to prosecute those who comitted such acts. <br><br> Click the image above to learn more.
+                <h3>Run length encoding</h3>
+                <p class="paragraph-small">
+                    Run length encoding works by countng how many of each repeated data folow each other. Then, this is noted as a shorter way of representing that string of data.
+                    For example, 444444 could be compressed into 6 '4's. This method however, is often used for images that do not want to lose any fidelity, such as PNG files.
                 </p>
+                <img src='../img/RLE.png'></img>
+                <h3>Dictionary encoding</h3>
+                <p class='paragraph-small'>
+                  Dictionary encoding is another method of lossless compression. It works by assigning values to each individual item in a data set. This method works
+                  especially well for files such as text documents. As every word is saved and can be referenced, no data is lost. In documents in which contain a lot of
+                  words, this method of compression can vastly reduce file size
+                  <p>
+                  <img src='../img/dict.jpg'></img>
+                </p>
+                <h3>Huffman Coding</h3>
+                  <p class="paragraph-small">
+                    Huffman coding is an optimised dictionary encodng method where the frequency of items occuring affects the length of code used to denote them.
+                    The more frequently a word is used, Binary trees are structures built by building down from the most frequent words down to the least frequent at the bottom.
+                    Each word (assigned to a "node") is referenced by a series of left and right directions reffered to as 1s and 0s. 0 refers to left and 1 refers to right at
+                    any intersection. Below demonstrates a basic binary tree for "Happy Birthday to you"
+                    <img src='../img/binaryTree.png'>
 
             </div>
         </div>
