--- a/RevisionPages/Programming.html
+++ b/RevisionPages/Programming.html
@@ -32,11 +32,13 @@
                 <h2 style="padding-top:50px;">Object Oriented Programming - Fundamentals</h2>
                 <h3>Many modern languages are based around OOP, including Java, C++, Python & more<p>The basics are as followed:</h3>
                 <ol class="spacing-small" style="text-align: left">
+                    <h4 style="background-color:#f9ce36">The five basic OOP principles</h4>
                     <li>Code is divided up into <b>objects</b> which contain variables (referred to as <b>attributes</b>) and functions (known as <b>methods</b>)</li>
                     <li>Objects are made from "blueprints" called <b>classes</b>. Objects are an instance of a class</li>
                     <li>Objects can interact with each other via <b>public</b> methods or attributes</li>
                     <li>Methods and attributes can be hidden from other classes by setting them as <b>private</b></li>
                     <li>The bundling of methods and attributes into objects with access control is called <b>encapsulation</b></li>
+                    <p>
                 </ol>
                 <p></p>
                 <p class="paragraph-small">
@@ -48,7 +50,9 @@
                     the basic definitions of OOP terms can be found below.
                 </p>
                 <p>
-                <ol class="spacing-small" style="text-align: left">
+
+                <ul>
+                  <h4 style="background-color:#f9ce36">Some key terms that are essential for OOP</h4>
                     <li>Classes and Objects - Classes provide a template or blueprint for objects. Objects are an instance of a class.</li>
                     <li>Attributes - Attributes are properties or characteristics of objects, given in the form of variables</li>
                     <li>Methods - Methods are actions of objects, given in the form of procedures or subroutines</li>
@@ -59,7 +63,8 @@
                     <li>Static vs Instance - Static methods are not linked to a specific object, but instead belong to the class. Instance methods are linked to an instance of a class (A specific object)</li>
                     <li>Value vs Reference - Value data types make a copy of the original data and pass that through. This means the original is not affected. By reference data types refer to the memory location of the data, meaning the value changes when updated.</li>
                     <li>Refactoring - Changing the layout or format of code to make it more efficient or tidier, but not changing the functionality</li>
-                </ol>
+                    <p>
+                </ul>
             </div>
         </div>
     </div>
