--- a/RevisionPages/Connectivity.html
+++ b/RevisionPages/Connectivity.html
@@ -30,12 +30,14 @@
             <div class="col-md-8 col-md-offset-2 ">
                 <h2 style="padding-top:50px;">Compression</h2>
                 <h3>Lossy vs lossless compression</h3>
-                <ol class="spacing-small" style="text-align: left" >
+                <ul>
+                  <h4 style="background-color:#7768e8">Some basic rules</h4>
                     <li>In lossless compression, not every byte of data is stored</li>
                     <li>Lossy compression is used when some data can be missing (e.g. in music files)</li>
                     <li>Lossless compression is used when all data must be preserved (e.g. in a text document)</li>
                     <li>Examples of lossless compression include run-length encoding and dictionary encoding</li>
-                </ol>
+                    <p>
+                </ul>
                 <p></p>
                 <h3>Run length encoding</h3>
                 <p class="paragraph-small">
@@ -57,7 +59,7 @@
                     The more frequently a word is used, Binary trees are structures built by building down from the most frequent words down to the least frequent at the bottom.
                     Each word (assigned to a "node") is referenced by a series of left and right directions reffered to as 1s and 0s. 0 refers to left and 1 refers to right at
                     any intersection. Below demonstrates a basic binary tree for "Happy Birthday to you"
-                    <img src='../img/binaryTree.png'>
+                    <img src='../img/binaryTree.png' align="middle">
 
             </div>
         </div>
